compiler/testData/diagnostics/tests/controlFlowAnalysis/kt843.jet
//KT-843 Don't highlight incomplete variables as unused

package kt843

fun main(args : Array<String>) {
    // Integer type
    val // this word is grey, which looks strange
<!SYNTAX!>}<!SYNTAX!><!><!>